# pmpp

./: CMakeLists.txt
include/pmpp/: util.hh
src/: CMakeLists.txt
src/ch1/: CMakeLists.txt  hello.cu  vecAdd.cu
src/ch11/: CMakeLists.txt  scan.cu
src/ch12/: CMakeLists.txt  merge.cu
src/ch3/: CMakeLists.txt  matMul.cu
src/ch5/: CMakeLists.txt  a.out  tiledMatMul.cu
src/ch7/: CMakeLists.txt  conv.cu
src/scratch/: CMakeLists.txt  scratch.cu
